Fix spacing on blog index

--- a/app/blog/page.module.css
+++ b/app/blog/page.module.css
@@ -1,7 +1,6 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: var(--content-spacing);
 }
 
 .year {
@@ -13,7 +12,6 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 12px;
 }
 
 .post {
